# drlcontrol

./: .gitignore  README.md  TROUBLESHOOTING.md  gen_terrain.nu  pyproject.toml
models/: ant_target.xml
models/anybotics_anymal_b/: anymal_b.xml  scene_base.xml  scene_corridor.xml  scene_terrain.xml  target.xml
models/boston_dynamics_spot/: scene_gap.xml  scene_smooth_perlin.xml  scene_terrain.xml  scene_v1.xml  scene_v2.xml
models/trossen_vx300s/: scene_box.xml  vx300s.xml
src/: RealTimePlot.py  env.py  mj.py  ppo.py  ppo_debug.py  stable_baselines.py  terrain_presets.py
src/envs/: __init__.py  ant.py  cassie.py  legged.py  spot.py  viperx.py
src/envs/go2/: __init__.py  v0_forward.py
src/envs/legged/: __init__.py  base.py  forward.py  target.py  terrain.py
src/envs/spot/: __init__.py  v0_forward.py  v1_target.py  v2_terrain.py
src/utils/: linalg.py
src/utils/terrain_tool/: README.md  terrain_generator.py
src/wrappers/: __init__.py
